# tejat

./: Cargo.toml  Makefile.toml  OTHER_CRATES.txt  README.md
alhena/: Cargo.toml  PLANS.md
propus/: Cargo.toml  PLANS.md
propus/example/: config.toml
propus/src/: file.rs
src/: lib.rs  mime.rs  status.rs  uri.rs
src/gemtext/: mod.rs
tejat/: Cargo.toml
tejat/src/: lib.rs  status.rs
tejat/src/gemtext/: heading.rs  link.rs  macros.rs  mod.rs  parser.rs
tejat/tests/: comprehensive.rs
wasat/: Cargo.toml  PLANS.md
