[package]
name = "tejat"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.16"
nom = "7.1.3"
nom_locate = "4.1"
thiserror = "1.0"
url = "2.2.2"

[dev-dependencies]
paste = "1.0"
pretty_assertions = "1.3"
test-case = "3.0"
